@@ -21,6 +21,18 @@ except ImportError:
 _marker = object()
 
 
+BOOLEAN_HTML_ATTRS = frozenset([
+    # List of Boolean attributes in HTML that should be rendered in
+    # minimized form (e.g. <img ismap> rather than <img ismap="">)
+    # From http://www.w3.org/TR/xhtml1/#guidelines (C.10)
+    # TODO: The problem with this is that this is not valid XML and
+    # can't be parsed back!
+    "compact", "nowrap", "ismap", "declare", "noshade", "checked",
+    "disabled", "readonly", "multiple", "selected", "noresize",
+    "defer"
+])
+
+
 class OpaqueDict(dict):
     def __new__(cls, dictionary):
         inst = dict.__new__(cls)
@@ -68,6 +80,13 @@ class BaseTemplate(template.PageTemplate):
     default_expression = "path"
 
     literal_false = True
+
+    @property
+    def boolean_attributes(self):
+        if self.content_type == 'text/xml':
+            return set()
+
+        return BOOLEAN_HTML_ATTRS
 
     @property
     def builtins(self):
