@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
 <form>
   <input type="input" tal:attributes="checked False" />
+  <input type="input" tal:attributes="checked True" />
 </form>
